--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Xwerx - ToDo</title>
+	<title>Kafej - ToDo</title>
 	<meta name="description" content="Example project for Xwerx">
 
 	<link href="css/default.css" rel="stylesheet" type="text/css" />
